Fixed visibility issue

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ button:hover {
 
 .hidden {
     display: none;
+    visibility: hidden;
 }
 
 .alert {
